# reqninja

./: .gitignore  .pre-commit-config.yaml  CLI_ISSUE_RESOLUTION_TEST.sh  CLI_USAGE_GUIDE.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_SUCCESS.md  INSTALLATION_TEST.sh  LICENSE  Makefile  PROJECT_STRUCTURE.md  PYPI_PUBLICATION_v1.2.0.md  PYPI_PUBLISHING_GUIDE.md  PYPI_UPDATE_SUMMARY.md  QA_REPORT.md  README.md  RELEASE_v1.1.0.md  REPOSITORY_UPDATE_SUMMARY.md  USAGE_GUIDE.md  WORKING_EXAMPLES.md  config.example.yml  demo_api.py  demo_config.yml  demo_example.py  pyproject.toml  qa_test.py  setup_dev.py  verify_v1.2.0.py
.github/workflows/: publish.yml  test.yml
examples/: advanced_usage.py  basic_usage.py  cli_examples.sh
reqninja/: __init__.py  __main__.py  _version.py  auth.py  cli.py  client.py  config.py  exceptions.py  response.py  utils.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py
